Upcoming
- Worldgen enhancements: random biome dependend features on the terrain. Currently spheres and spikes
- New city biome
- Fixed a problem with underground station not being generated when there was a floating city above it
- Added support for mob spawners to cities and added solider spawning to some of the Ariente biomes
- Added background music from Icelingbolt, nakisee, and TheGur90

0.0.22-alpha:
- Fixed another problem with generated flux levitators crashing

0.0.21-alpha:
- Fixed a problem with the city ai crashing

0.0.20-alpha:
- The 'dimension' part of Ariente is now a separate mod